--- a/index.html
+++ b/index.html
@@ -316,11 +316,14 @@ P.S. Pranali is the best sister in the world</p>
 
         <div class="card__inner">
               <div class="card__img">
-                  <img src="./img/g8.jpg" alt="">
+                  <img src="./img/g16.jpg" alt="">
               </div>
               <div class="details">
-                <p>Happy (quarantine) bday to one of my most most most favourite sister cum bestfriend now and forever. Cheers to all our laughs and cries, midnight gossips to sharing each other our deepest secrets to being each others bus partner in family trips. Spending time with you is one of the best therepy. I miss bitching about people with u and also our funny jokes which only we find funny (as others are jeleous of us)🤣
-Happy birthday 🥳❤.</p>
+                <p>HAPPY BIRTHDAY SAYYLALLALALA :))That's exactly how happy I get when we plan to meet. You're someone I could be with all day and miss you the second we depart. My heart till date gets sad when it's the time to leave y'all and specially you :)
+You're the kind of cousin that everyone needs in their life, but everyone isn't blessed as me.
+We've been through so much drama and so much gossips over the past so many years, can't wait to listen to all the drama that just have happened in this lockdown.I wouldn't care how many people come and go through the life, I've already got my permanent best friend in you.Let me tell you, there isn't a single un- funny bone it, you've got great humor. I'll give you that. Thank you for always letting me count on you,  for spending on us , for the extremely funny times where our mouth would hurt from laughing, for being the best cousin that you are. ( After pranu tai, ofc )
+Ending my words here, I love you with all my heart.
+Happy birthday sayllaaaaa :'))</p>
               </div>
         </div>
 
@@ -394,7 +397,10 @@ Happy birthday to the most gorgeous & stunning beauty💜. Thank u for alwayz be
           <div class="strobe-light strobe-light--1"></div>
           <div class="strobe-light strobe-light--2"></div>
         </div>
-        <h1><span>L</span><span>e</span><span>t</span><span>'s</span> <br> <span>P</span><span>a</span><span>r</span><span>t</span><span>y</span><span>!!</span></h1>
+        <h1>
+          <span>P</span><span>a</span><span>r</span><span>t</span><span>y</span><br>
+          <span>H</span><span>a</span><span>r</span><span>d</span><span>!!</span>
+        </h1>
       </div>
 
   <h1 style="line-height:1">And Finally <br> The Birthday Dance</h1>
